# centipede.cpp

./: .clang-format  .clang-tidy  .cmake-format  .codecov.yml  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  LICENSE  README.md  conanfile.py
.github/actions/generate_caches/: action.yml
.github/actions/pre_build_config/: action.yml
.github/workflows/: CD_doxygen.yml  build_container_env.yml  ci.yml  coverage.yml  static_analysis.yml
cmake/: check_submodules.cmake  ctest_common.cmake  ctest_coverage.cmake  ctest_dashboard.cmake  ctest_sanitizer.cmake  load_dependencies.cmake  project_config.cmake  project_options.cmake
doc/: CMakeLists.txt  basic_usages.md  installation.md  latex_macros.tex  main.md  project_structure.md  references.bib  styles_convention.md
doc/theories/: linear_reg.md
source/: CMakeLists.txt  main.cpp
source/centipede/: CMakeLists.txt  centipede.cpp  centipede.hpp
source/centipede/core/: CMakeLists.txt  handler.cpp  handler.hpp
source/centipede/core/engines/: base_engine.hpp  eigen_engine.hpp  eigen_matrix_base_addon.inc  engine_concept.hpp  engine_types.hpp  master_engine.hpp  result.hpp
source/centipede/data/: CMakeLists.txt  entry.hpp  entry_base.hpp  entrypoint.hpp  entrypoint_base.hpp
source/centipede/reader/: binary.cpp  binary.hpp
source/centipede/util/: CMakeLists.txt  common_definitions.hpp  common_traits.hpp  error_types.hpp  namespaces.hpp  progress_indicator.hpp  return_types.hpp
source/centipede/writer/: CMakeLists.txt  binary.cpp  binary.hpp
test/: CMakeLists.txt
test/integration_tests/: CMakeLists.txt  test_eigen.cpp  test_reader.cpp  test_writer.cpp
test/unit_tests/: CMakeLists.txt  shared.hpp  test_base_engine.cpp  test_binary_reader.cpp  test_binary_writer.cpp  test_eigen_engine.cpp  test_entry.cpp  test_error_types.cpp  test_formatter.cpp  test_handler.cpp  test_master_engine.cpp
util/: doxygen_header.html  mathjax-config.js
util/conan_config/: settings.yml
util/container_env/: Dockerfile
